# rustracer

./: .gitignore  Cargo.toml  README.md
src/: color.rs  hittable.rs  hittable_list.rs  main.rs  randgen.rs  rasterizable.rs  ray.rs  sphere.rs
