[package]
name = "rust_raycaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
debug = true

[profile.release]
debug = true
opt-level = 1


[dependencies]
"nalgebra" = "*"
"image" = "*"
"rand" = "*"
