[package]
name = "rustracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
debug = true
opt-level = 1

[profile.release]
debug = false
opt-level = 3

[dependencies]
"nalgebra" = "*"
"image" = "*"
"rand" = "*"
